refactor: code review fixes — connection pooling, type safety, error handling
- httpx.AsyncClient shared singleton for connection pooling
- build_qa_graph return type: StateGraph → CompiledStateGraph
- resp.text scope fix in diff truncation logging
- request.json() double parse → json.loads(body)
- HTTPStatusError separated from generic Exception handling
- pyproject.toml description updated

--- a/Velie/pyproject.toml
+++ b/Velie/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "velie"
 version = "0.1.0"
-description = "Add your description here"
+description = "AI-powered code review agent for RYKNSH records — LangGraph + FastAPI"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
