impl: Sprint 2 — Multi-tenant state with AsyncPostgresSaver
- supabase/migrations/001_init.sql: tenants + reviews tables with RLS
- agent/checkpointer.py: AsyncPostgresSaver lifecycle management
- agent/tenant.py: Tenant resolution (installation_id → TenantConfig)
- graph.py: checkpointer param, RunnableConfig for tenant model override
- app.py v0.2.0: lifespan, tenant resolution, RunnableConfig injection
- config.py: Optional Supabase settings (graceful stateless fallback)
- All 10 tests passing, E2E 4/4 checks passing

--- a/Velie/.env.example
+++ b/Velie/.env.example
@@ -1,16 +1,18 @@
-# ============================================
-# Velie QA Agent - Environment Variables
-# ============================================
+# =============================================================
+# Velie QA Agent — Environment Variables
+# =============================================================
 
-# Anthropic API Key (Claude)
-ANTHROPIC_API_KEY=sk-ant-xxxxx
-
-# GitHub Personal Access Token (repo scope)
-GITHUB_TOKEN=ghp_xxxxx
-
-# GitHub Webhook Secret (for HMAC-SHA256 verification)
+# --- Required ---
+ANTHROPIC_API_KEY=sk-ant-your-key-here
+GITHUB_TOKEN=ghp_your-token-here
 GITHUB_WEBHOOK_SECRET=your-webhook-secret-here
 
-# Server Configuration
-PORT=8000
-LOG_LEVEL=info
+# --- Supabase (Optional — stateless mode if not set) ---
+# SUPABASE_DB_URL=postgresql://postgres:password@db.xxx.supabase.co:5432/postgres
+# SUPABASE_URL=https://xxx.supabase.co
+# SUPABASE_ANON_KEY=eyJhbGciOi...
+
+# --- Server ---
+# PORT=8000
+# LOG_LEVEL=info
+# VELIE_ENV=development
