--- a/Velie/pyproject.toml
+++ b/Velie/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "httpx>=0.28.1",
     "langchain-anthropic>=1.3.3",
     "langgraph>=1.0.9",
+    "langgraph-checkpoint-postgres>=3.0.4",
+    "psycopg-pool>=3.3.0",
+    "psycopg[binary]>=3.3.3",
     "pydantic-settings>=2.13.1",
     "pygithub>=2.8.1",
     "python-dotenv>=1.2.1",
