--- a/Velie/pyproject.toml
+++ b/Velie/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pyjwt>=2.11.0",
     "python-dotenv>=1.2.1",
     "redis>=7.2.0",
+    "supabase>=2.28.0",
     "uvicorn>=0.41.0",
 ]
 
