feat: Railway deploy config + OAuth env vars

--- a/Velie/.env.example
+++ b/Velie/.env.example
@@ -25,3 +25,8 @@ GITHUB_WEBHOOK_SECRET=your-webhook-secret-here
 # PORT=8000
 # LOG_LEVEL=info
 # VELIE_ENV=development
+
+# --- GitHub OAuth (Dashboard login) ---
+# GITHUB_OAUTH_CLIENT_ID=Ov23li...
+# GITHUB_OAUTH_CLIENT_SECRET=your-oauth-secret
+# NEXT_PUBLIC_SITE_URL=https://your-velie-dashboard.vercel.app
